# FDF

./: .100.gif.icloud  .mars.gif.icloud  CMakeLists.txt  Makefile  README.md  fdf.h  ft_filling_part_two.c  iso.c  key.c  print.c
build-menu1-Desktop_Qt_5_15_2_clang_64bit-Release/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-menu1-Desktop_Qt_5_15_2_clang_64bit-Release/menu1.app/Contents/: Info.plist
build-menu1-Desktop_Qt_5_15_2_clang_64bit-Release/menu1.app/Contents/MacOS/: menu1
libft/: ft_strdup.c  ft_strlen.c
menu1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
menu1/build-menu1-Desktop_Qt_6_0_1_clang_64bit-Release/: .qmake.stash  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
menu1/build-menu1-Desktop_Qt_6_0_1_clang_64bit-Release/menu1.app/Contents/: Info.plist
menu1/build-menu1-Desktop_Qt_6_0_1_clang_64bit-Release/menu1.app/Contents/MacOS/: menu1
project/: Makefile  author  fdf  fdf.h  filling.c  ft_filling_part_two.c  iso.c  key.c  main.c  print.c  push.c  volume.c
