cmake_minimum_required(VERSION 3.15)
project(FDF C)

set(CMAKE_C_STANDARD 11)

include_directories(project)
include_directories(project/libft)

add_executable(FDF
        project/libft/ft_atoi.c
        project/libft/ft_bzero.c
        project/libft/ft_isalnum.c
        project/libft/ft_isalpha.c
        project/libft/ft_isascii.c
        project/libft/ft_isdigit.c
        project/libft/ft_isprint.c
        project/libft/ft_itoa.c
        project/libft/ft_lstadd.c
        project/libft/ft_lstdel.c
        project/libft/ft_lstdelone.c
        project/libft/ft_lstiter.c
        project/libft/ft_lstmap.c
        project/libft/ft_lstnew.c
        project/libft/ft_memalloc.c
        project/libft/ft_memccpy.c
        project/libft/ft_memchr.c
        project/libft/ft_memcmp.c
        project/libft/ft_memcpy.c
        project/libft/ft_memdel.c
        project/libft/ft_memmove.c
        project/libft/ft_memory.c
        project/libft/ft_memset.c
        project/libft/ft_nbrlen.c
        project/libft/ft_new_copy.c
        project/libft/ft_putchar.c
        project/libft/ft_putchar_fd.c
        project/libft/ft_putendl.c
        project/libft/ft_putendl_fd.c
        project/libft/ft_putnbr.c
        project/libft/ft_putnbr_fd.c
        project/libft/ft_putstr.c
        project/libft/ft_putstr_fd.c
        project/libft/ft_s.c
        project/libft/ft_sizem.c
        project/libft/ft_strcat.c
        project/libft/ft_strchr.c
        project/libft/ft_strclr.c
        project/libft/ft_strcmp.c
        project/libft/ft_strcpy.c
        project/libft/ft_strdel.c
        project/libft/ft_strdup.c
        project/libft/ft_strequ.c
        project/libft/ft_striter.c
        project/libft/ft_striteri.c
        project/libft/ft_strjoin.c
        project/libft/ft_strlcat.c
        project/libft/ft_strlen.c
        project/libft/ft_strmap.c
        project/libft/ft_strmapi.c
        project/libft/ft_strncat.c
        project/libft/ft_strncmp.c
        project/libft/ft_strncpy.c
        project/libft/ft_strnequ.c
        project/libft/ft_strnew.c
        project/libft/ft_strnstr.c
        project/libft/ft_strrchr.c
        project/libft/ft_strsplit.c
        project/libft/ft_strstr.c
        project/libft/ft_strsub.c
        project/libft/ft_strtrim.c
        project/libft/ft_tolower.c
        project/libft/ft_toupper.c
        project/libft/libft.h
        project/colour.c
        project/fdf.h
        project/filling.c
        project/ft_filling_part_two.c
        project/get_next_line.c
        project/get_next_line.h
        project/iso.c
        project/key.c
        project/main.c
        project/print.c
        project/push.c
        project/volume.c)
